<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/manage_nav_graph"
    app:startDestination="@id/favoritesFragment">

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.project.pokedex.views.fragments.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/recentsFragment"
        android:name="com.project.pokedex.views.fragments.RecentsFragment"
        android:label="@string/menu_recents"
        tools:layout="@layout/fragment_recents" />
    <fragment
        android:id="@+id/allFragment"
        android:name="com.project.pokedex.views.fragments.AllFragment"
        android:label="@string/menu_all"
        tools:layout="@layout/fragment_all" />
</navigation>