<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/pokemon_backgroun_gradient"
        android:orientation="vertical"
        tools:context=".views.fragments.PokemonDetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contraintLayoutPokeDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".views.fragments.PokemonDetailFragment">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/headerPokemon"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:elevation="9dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CardView" />

            <ImageView
                android:id="@+id/imageViewPokeDetailSprite"
                android:contentDescription="@string/content_descriptipn_poke_img"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:elevation="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/headerPokemon"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textViewPokeDetailName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headerPokemon"
                tools:text="Bulbasaur" />

            <LinearLayout
                android:id="@+id/linearLayoutTypes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPokeDetailName">


                <TextView
                    android:id="@+id/textViewPokeDetailType1"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="Planta" />

                <TextView
                    android:id="@+id/textViewPokeDetailType2"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="Veneno" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewPokeDetailWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/textViewPokeDetailHeight"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutTypes"
                tools:text="180 KG" />

            <TextView
                android:id="@+id/textViewWeightTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@+id/textViewPokeDetailHeight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPokeDetailWeight" />

            <TextView
                android:id="@+id/textViewPokeDetailHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textViewPokeDetailWeight"
                app:layout_constraintTop_toTopOf="@+id/textViewPokeDetailWeight"
                tools:text="50 m" />

            <TextView
                android:id="@+id/textViewHeightTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewPokeDetailWeight"
                app:layout_constraintTop_toBottomOf="@+id/textViewPokeDetailHeight" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/base_stats"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewHeightTitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewStats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                tools:itemCount="5"
                tools:listitem="@layout/stats_list" />

            <ProgressBar
                android:id="@+id/progressBarLoading"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/iamgeButtonAddFavorite"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:elevation="10dp"
                android:contentDescription="@string/contect_desc_image_button"
                android:background="@android:color/transparent"
                android:src="@drawable/star_off"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewPokeDetailNumber"
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:layout_marginStart="15dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:elevation="10dp"
                tools:text="#0001"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageViewPokeDetailSprite" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/abilities_pokeInfo"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewStats" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/abilitiesRecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:itemCount="5"
                tools:listitem="@layout/abilities_list" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>




